<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/img_welcome_tour"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/edt_Login"
                android:textStyle="bold"
                android:hint="@string/hint_email"></EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <EditText
                android:id="@+id/password"
                android:password="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/edt_Login"
                android:textStyle="bold"
                android:hint="@string/hint_password"></EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingRight="10dp"
            android:paddingLeft="10dp">
            <Button
                android:id="@+id/btnDangNhap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_LOGIN"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:background="@drawable/btn_join"></Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"></LinearLayout>
    </LinearLayout>

</LinearLayout>