<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/img_welcome_tour">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="40dp">
            </com.google.android.gms.common.SignInButton>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_centerInParent="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="20dp">

                <Button
                    android:id="@+id/btn_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/btn_sign_up"></Button>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingRight="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_login"
                    android:textColor="@color/white"
                    android:textSize="17dp"
                    android:gravity="right"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_login"
                    android:background="@null"
                    android:textColor="@color/btn_Login"
                    android:textSize="18dp"
                    android:gravity="top"></Button>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>